Updated with 3.20, rewritten using Methods.

--- a/allclasses-frame.html
+++ b/allclasses-frame.html
@@ -5,6 +5,6 @@
 <title>All classes</title>
 <link rel="stylesheet" type="text/css" href="fgldoc.css">
 </head>
-<body><div>All classes<br><a target="main-frame" href="src/main.html">main</a><br><a target="main-frame" href="src/test_chart.html">test_chart</a><br><a target="main-frame" href="webcomponents/api/wc_c3chart.html">wc_c3chart</a><br>
+<body><div>All classes<br><a target="main-frame" href="src/main.html">main</a><br><a target="main-frame" href="webcomponents/api/str.html">str</a><br><a target="main-frame" href="src/test_chart.html">test_chart</a><br><a target="main-frame" href="webcomponents/api/wc_c3chart.html">wc_c3chart</a><br>
 </div></body>
 </html>
