--- a/index-all.html
+++ b/index-all.html
@@ -18,24 +18,17 @@
 <td>Next</td>
 </tr></table>
 <hr>
-<a href="#A">A</a> <a href="#C">C</a> <a href="#D">D</a> <a href="#E">E</a> <a href="#I">I</a> <a href="#L">L</a> <a href="#M">M</a> <a href="#R">R</a> <a href="#S">S</a> <a href="#T">T</a> <a href="#W">W</a> <hr>
+<a href="#A">A</a> <a href="#D">D</a> <a href="#G">G</a> <a href="#I">I</a> <a href="#L">L</a> <a href="#M">M</a> <a href="#N">N</a> <a href="#R">R</a> <a href="#S">S</a> <a href="#T">T</a> <a href="#W">W</a> <hr>
 <h2><a id="A">A</a></h2>
 <dl>
 <dt>
 <a href="webcomponents/api/package-summary.html"><b>api</b></a> - Package </dt>
 <dd>
  api</dd>
-</dl>
-<h2><a id="C">C</a></h2>
-<dl>
 <dt>
-<a href="webcomponents/api/wc_c3chart.html#Column_Set"><b>Column_Set()</b></a> - FUNCTION in class webcomponents.api.<a href="webcomponents/api/wc_c3chart.html">wc_c3chart</a>
+<a href="webcomponents/api/str.html#ArraySet"><b>ArraySet()</b></a> - FUNCTION in class webcomponents.api.<a href="webcomponents/api/str.html">str</a>
 </dt>
-<dd> Set tColumn of data from JSONArray string</dd>
-<dt>
-<a href="webcomponents/api/wc_c3chart.html#Create"><b>Create()</b></a> - FUNCTION in class webcomponents.api.<a href="webcomponents/api/wc_c3chart.html">wc_c3chart</a>
-</dt>
-<dd> Creates a new instance of Chart</dd>
+<dd> Set a dynamic array of strings from JSONarray string</dd>
 </dl>
 <h2><a id="D">D</a></h2>
 <dl>
@@ -44,12 +37,12 @@
 </dt>
 <dd> Returns list of possible values in a domain</dd>
 </dl>
-<h2><a id="E">E</a></h2>
+<h2><a id="G">G</a></h2>
 <dl>
 <dt>
-<a href="webcomponents/api/wc_c3chart.html#Element"><b>Element()</b></a> - FUNCTION in class webcomponents.api.<a href="webcomponents/api/wc_c3chart.html">wc_c3chart</a>
+<a href="/tElement.html#Get"><b>Get()</b></a> - FUNCTION in class .<a href="/tElement.html">tElement</a>
 </dt>
-<dd> DeSerialize a selected chart element</dd>
+<dd> DeSerialize a selected chart element from JSON string</dd>
 </dl>
 <h2><a id="I">I</a></h2>
 <dl>
@@ -76,6 +69,13 @@
 </dt>
 <dd></dd>
 </dl>
+<h2><a id="N">N</a></h2>
+<dl>
+<dt>
+<a href="/tChart.html#New"><b>New()</b></a> - FUNCTION in class .<a href="/tChart.html">tChart</a>
+</dt>
+<dd> Define a new instance of Chart</dd>
+</dl>
 <h2><a id="R">R</a></h2>
 <dl>
 <dt>
@@ -86,17 +86,25 @@
 <h2><a id="S">S</a></h2>
 <dl>
 <dt>
-<a href="webcomponents/api/wc_c3chart.html#Serialize"><b>Serialize()</b></a> - FUNCTION in class webcomponents.api.<a href="webcomponents/api/wc_c3chart.html">wc_c3chart</a>
+<a href="/tChart.html#Serialize"><b>Serialize()</b></a> - FUNCTION in class .<a href="/tChart.html">tChart</a>
 </dt>
 <dd> Serialize a chart</dd>
 <dt>
-<a href="webcomponents/api/wc_c3chart.html#Set"><b>Set()</b></a> - FUNCTION in class webcomponents.api.<a href="webcomponents/api/wc_c3chart.html">wc_c3chart</a>
+<a href="/tData.html#Set"><b>Set()</b></a> - FUNCTION in class .<a href="/tData.html">tData</a>
+</dt>
+<dd> Set column of data from JSONArray string</dd>
+<dt>
+<a href="/tChart.html#Set"><b>Set()</b></a> - FUNCTION in class .<a href="/tChart.html">tChart</a>
 </dt>
 <dd> Set initial contents of widget</dd>
 <dt>
 <a href="src/package-summary.html"><b>src</b></a> - Package </dt>
 <dd>
  src</dd>
+<dt>
+<a href="webcomponents/api/str.html"><b>str</b></a> - Class in package <a href="webcomponents/api/package-summary.html">webcomponents.api</a>
+</dt>
+<dd></dd>
 </dl>
 <h2><a id="T">T</a></h2>
 <dl>
