--- a/overview-summary.html
+++ b/overview-summary.html
@@ -39,8 +39,10 @@
 </table>
 <p></p>
 <h2><a id="Description">Package Description</a></h2>
-<api_usage> Charting web component based on c3js.org, which in turn is
- based on d3.js</api_usage><api_usage> wc_c3chart: Highly configurable charting widget with responsive elements</api_usage><hr>
+<p> Charting web component based on c3js.org, which in turn is
+ based on d3.js</p>
+<p> wc_c3chart: Highly configurable charting widget with responsive elements</p>
+<hr>
 <table BORDER="0" CELLPADDING="0" CELLSPACING="3" SUMMARY=""><tr>
 <td><b>Overview</b></td>
 <td>Package</td>
