--- a/src/test_chart.html
+++ b/src/test_chart.html
@@ -22,27 +22,27 @@
 <a id="function_summary"></a><table border="1" width="100%" cellpadding="3" cellspacing="0" class="summary">
 <tr><th class="summary" colspan="2">FUNCTION Summary</th></tr>
 <tr>
-<td class="summary-text"></td>
+<td class="summary-text" width="25%">public</td>
 <td class="summary-text">
-<b><a href="#Load">Load</a></b>(r_chart <a href="wc_c3chart.html#tChart">wc_c3chart.tChart</a>, r_element <a href="wc_c3chart.html#tElement">wc_c3chart.tElement</a>)<br>
+<b><a href="#Load">Load</a></b>(r_chart <a href="wc_c3chart.html#tChart">wc_c3chart.tChart</a> INOUT, r_element <a href="wc_c3chart.html#tElement">wc_c3chart.tElement</a> INOUT)<br>
 </td>
 </tr>
 <tr>
-<td class="summary-text"></td>
+<td class="summary-text" width="25%">public</td>
 <td class="summary-text">
 <b><a href="#Table">Table</a></b>(p_direction STRING)<br>
 </td>
 </tr>
 <tr>
-<td class="summary-text"></td>
+<td class="summary-text" width="25%">public</td>
 <td class="summary-text">
 <b><a href="#Test">Test</a></b>()<br>
 </td>
 </tr>
 </table>
 <br><h2>Functions</h2>
-<a id="Load"> </a><h3>Load</h3>
-<tt>FUNCTION <b>Load</b>(r_chart <a href="wc_c3chart.html#tChart">wc_c3chart.tChart</a>, r_element <a href="wc_c3chart.html#tElement">wc_c3chart.tElement</a>)</tt><dl>
+<h3><a id="Load">Load</a></h3>
+<tt>public FUNCTION <b>Load</b>(r_chart <a href="wc_c3chart.html#tChart">wc_c3chart.tChart</a> INOUT, r_element <a href="wc_c3chart.html#tElement">wc_c3chart.tElement</a> INOUT)</tt><dl>
 <dd></dd>
 <dd><dl>
 <dt><b>Parameters:</b></dt>
@@ -52,8 +52,8 @@
 </dl></dd>
 </dl>
 <hr>
-<a id="Table"> </a><h3>Table</h3>
-<tt>FUNCTION <b>Table</b>(p_direction STRING)</tt><dl>
+<h3><a id="Table">Table</a></h3>
+<tt>public FUNCTION <b>Table</b>(p_direction STRING)</tt><dl>
 <dd></dd>
 <dd><dl>
 <dt><b>Parameters:</b></dt>
@@ -63,12 +63,11 @@
 </dl></dd>
 </dl>
 <hr>
-<a id="Test"> </a><h3>Test</h3>
-<tt>FUNCTION <b>Test</b>()</tt><dl>
+<h3><a id="Test">Test</a></h3>
+<tt>public FUNCTION <b>Test</b>()</tt><dl>
 <dd></dd>
 <dd><dl></dl></dd>
 </dl>
-<hr>
 <table BORDER="0" CELLPADDING="0" CELLSPACING="3" SUMMARY=""><tr>
 <td><a href="../overview-summary.html">Overview</a></td>
 <td><a href="package-summary.html">Package</a></td>
